syntax = "proto3";

package product;

service ProductService {
  rpc ListProducts (Empty) returns (ProductListResponse);
  rpc AddProduct (Product) returns (ProductResponse);
  rpc UpdateProduct (Product) returns (ProductResponse);
  rpc DeleteProduct (ProductId) returns (Empty);
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductId {
  int32 id = 1;
}

message ProductResponse {
  Product product = 1;
}

message ProductListResponse {
  repeated Product products = 1;
}

message Empty {}
